--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Ignore all files in the gtFine and leftImg8bit directories
-data/gtFine
-data/leftImg8bit
+data/cityscapes/
 
 # DS_Store files, pycaches, and other common ignores
 **/.DS_Store
 .DS_Store
 __pycache__/
+*.pyc
+data/lst.py
