--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+certifi==2025.4.26
+charset-normalizer==3.4.2
 contourpy==1.3.2
 cycler==0.12.1
+einops==0.8.1
 filelock==3.18.0
 fonttools==4.57.0
 fsspec==2025.3.2
+hf-xet==1.1.0
+huggingface-hub==0.31.1
+idna==3.10
 Jinja2==3.1.6
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
@@ -15,10 +21,16 @@ packaging==25.0
 pillow==11.2.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+requests==2.32.3
+safetensors==0.5.3
 setuptools==78.1.1
 six==1.17.0
 sympy==1.14.0
+timm==1.0.15
 torch==2.7.0
 torchvision==0.22.0
+tqdm==4.67.1
 typing_extensions==4.13.2
+urllib3==2.4.0
 wheel==0.45.1
