--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,31 @@
-certifi==2025.4.26
-charset-normalizer==3.4.2
-contourpy==1.3.2
+addict==2.4.0
+contourpy==1.1.1
 cycler==0.12.1
-einops==0.8.1
-filelock==3.18.0
 fonttools==4.57.0
-fsspec==2025.3.2
-hf-xet==1.1.0
-huggingface-hub==0.31.1
-idna==3.10
-Jinja2==3.1.6
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.3
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.5
+importlib_resources==6.4.5
+joblib==1.4.2
+kiwisolver==1.4.7
+matplotlib==3.7.5
+mmcv==1.3.10
+mmsegmentation==0.15.0
+numpy==1.24.4
 opencv-python==4.11.0.86
 packaging==25.0
-pillow==11.2.1
-pyparsing==3.2.3
+pillow==10.4.0
+platformdirs==4.3.6
+prettytable==3.11.0
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
-requests==2.32.3
-safetensors==0.5.3
-setuptools==78.1.1
+scikit-learn==1.3.2
+scipy==1.10.1
 six==1.17.0
-sympy==1.14.0
-timm==1.0.15
-torch==2.7.0
-torchvision==0.22.0
-tqdm==4.67.1
+threadpoolctl==3.5.0
+timm==0.4.12
+tomli==2.2.1
+torch==1.9.0
+torchvision==0.10.0
 typing_extensions==4.13.2
-urllib3==2.4.0
-wheel==0.45.1
+wcwidth==0.2.13
+yapf==0.43.0
+zipp==3.20.2
