--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 addict==2.4.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 contourpy==1.1.1
 cycler==0.12.1
+filelock==3.16.1
 fonttools==4.57.0
+fsspec==2025.3.0
+huggingface-hub==0.31.2
+idna==3.10
 importlib_resources==6.4.5
 joblib==1.4.2
 kiwisolver==1.4.7
@@ -17,15 +23,22 @@ prettytable==3.11.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
 scikit-learn==1.3.2
 scipy==1.10.1
 six==1.17.0
 threadpoolctl==3.5.0
 timm==0.4.12
+tokenizers==0.20.3
 tomli==2.2.1
 torch==1.9.0
 torchvision==0.10.0
+tqdm==4.67.1
+transformers==4.46.3
 typing_extensions==4.13.2
+urllib3==2.2.3
 wcwidth==0.2.13
 yapf==0.43.0
 zipp==3.20.2
