--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 addict==2.4.0
+annotated-types==0.7.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
+click==8.1.8
 contourpy==1.1.1
 cycler==0.12.1
+docker-pycreds==0.4.0
+eval_type_backport==0.2.2
 filelock==3.16.1
 fonttools==4.57.0
 fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.44
 huggingface-hub==0.31.2
 idna==3.10
 importlib_resources==6.4.5
@@ -20,6 +26,10 @@ packaging==25.0
 pillow==10.4.0
 platformdirs==4.3.6
 prettytable==3.11.0
+protobuf==5.29.4
+psutil==7.0.0
+pydantic==2.10.6
+pydantic_core==2.27.2
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
@@ -28,7 +38,10 @@ requests==2.32.3
 safetensors==0.5.3
 scikit-learn==1.3.2
 scipy==1.10.1
+sentry-sdk==2.28.0
+setproctitle==1.3.6
 six==1.17.0
+smmap==5.0.2
 threadpoolctl==3.5.0
 timm==0.4.12
 tokenizers==0.20.3
@@ -39,6 +52,7 @@ tqdm==4.67.1
 transformers==4.46.3
 typing_extensions==4.13.2
 urllib3==2.2.3
+wandb==0.19.11
 wcwidth==0.2.13
 yapf==0.43.0
 zipp==3.20.2
